# wiki-film-scraper

./: .gitignore  LICENSE  README.md  setup.cfg  wfs.py
src/wfs/: __init__.py  core.py  detail.py  film.py  wfs.py  wfs_old.py  work.py
src/wfs/choices/: films_artblog.json
src/wfs/helpers/: __init__.py  exceptions.py  general.py  info.py  regexes.py
src/wfs/html/: caged.html  hollow_triumph.html  out_of_the_past.html  raw_deal.html  scarlet_street.html  the_killers.html  the_lady_from_shanghai.html  the_pawnbroker.html  the_reckless_moment.html  the_seventh_victim.html  you_only_live_once.html
src/wfs/pages/: always.html  crime_wave.html  hotel_du_nord.html  i_wake_up_screaming.html  journey_into_fear.html  la_nuit_du_carrefour.html  night_and_the_city.html  on_dangerous_ground.html  port_of_shadows.html  pushover.html  requiem_for_a_heavyweight.html  suddenly.html  the_breaking_point.html  the_chase.html  the_deer_hunter.html  the_sound_of_fury.html  too_late_for_tears.html  touch_of_evil.html
src/wfs/search/: films_artblog.json
tests/: core.py  film_test.py  film_test_expected.json  film_test_expected_1.json  film_test_expected_2.json  film_test_expected_4.json  integration.py  test_scraper.py  test_scraper_local.py  unit_detail.py  unit_detail_2.py  unit_film.py  unit_film_2.py  unit_work.py  unit_work_2.py
tests/expected_film/: 1.json  2.json  3.json  4.json  5.json
tests/expected_work/: expected.json  extract.json
