[metadata]
name = wikifilm
version = 0.0.1
author = Tim Gudlewski
author_email = t.gudlewski@gmail.com
description = A program to scrape and organize film data from Wikipedia
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimGudlewski/wiki-film-scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src